# DriftGuard-Checks

./: .bash_aliases  .dockerignore  .env.backup.20250812-172005  .env.example  .env.hf  .env.infisical.example  .env.test  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config-full.yaml  .pre-commit-config-minimal.yaml  .pre-commit-config-staged.yaml  .pre-commit-config.yaml  .promptops.yml  .railwayignore  AI_TOOL_CHURN_ANALYSIS.md  AUDIT_REPORT_2025-08-10.md  AUDIT_SUMMARY.md  BILLING_INTEGRATION.md  CHANGELOG.md  CHATGPT5-PEER-REVIEW-PROMPT.md  CLAUDE.md  CLI-TEST-REPORT.md  COMPETITIVE_RESPONSE_ANALYSIS.md  CONTRIBUTING.md  CONVEX_DEPLOY_COMMANDS.md  CORRECT-DEPLOYMENT-GUIDE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  DEVOPS_VERIFICATION_ULTRA_DETAILED_REPORT.md  DRIFTGUARD_BUSINESS_VALIDATION_COMPREHENSIVE_REPORT.md  DRIFTGUARD_EVALUATION_ENGINE_IMPLEMENTATION.md  DRIFTGUARD_EVIDENCE_BASED_BUSINESS_ANALYSIS.md  DRIFTGUARD_MONETIZATION_ROADMAP_2025.md  DRIFTGUARD_PRICING_STRATEGY_REPORT.md  DRIFTGUARD_SIMPLE_ACTION_PLAN.md  Dockerfile  (+110 more)
.claude/: README.md  knowledge_graph_update_20250807.json  progress_tracking.json  session_summary_20250807.json  settings.json
.claude_memory/: context_embeddings.json  knowledge_graph.json  promptevolver-cli-session-2025-01-05.md  session_context.json
.githooks/: pre-commit
platform/: Makefile  README.md  alembic.ini  pyproject.toml
platform/driftguard/: database.py  main.py
platform/driftguard/alerts/: __init__.py
platform/tests/: conftest.py  test_main.py  test_ok.py  test_simple.py
(+1213 files in other folders)
